# refactor-godot

./: .gitignore  .gitmodules  Area2D.gd  BuildModal.gd  Constants.cs  GodotInterface.cs  LogicMiniGame.tscn  LogicMinigame.gd  Main.cs  Main.gd  Main.tscn  Picker.tscn  Refactor1.csproj  Refactor1.sln  UI.tscn  mono_crash.1a34c1b62.0.json  mono_crash.mem.10102.1.blob  project.godot
Assets/: RefactorTheme.tres
Assets/Fonts/: Montserrat.tres  MontserratDynamicLarge.tres  MontserrateDynamic.tres  ui_nunito_bold.tres  ui_nunito_extra_large.tres  ui_nunito_light.tres
Assets/Game/: recipes
Assets/LevelData/: level1.xml
Assets/Models/: Arrow.blend  Arrow.blend1  Arrow.dae  Arrow.dae.import  Coal.blend  Coal.blend1  Coal.dae  Coal.dae.import  Entrance.blend  Entrance.blend1  Entrance.dae  Entrance.dae.import  Entrance.png.import  LogicTile.blend  LogicTile.blend1  LogicTile.dae  LogicTile.dae.import  Material.material  Material_001.material  Material_002.material  Material_003.material  Material_004.material  ModifiedWorker.tscn  Worker.blend  Worker.blend1  Worker.dae  Worker.dae.import  arrow_n.png.001.png.import  arrow_n.png.import  arrow_n_png_001.material  coal.png.001.png.import  coal.png.import  entrance_material.material  entrance_texture.png.import  logic_tile.png.001.png.import  logic_tile.png.import
Assets/Textures/: AnimatedArrow.tres  LogicIdea.svg.import  UI.afdesign  arrow.svg.import  arrow_animated.svg.import  (+30 more)
Game/: CameraController.cs  Enumeration.cs  Grid.cs  GridBuilder.cs  GridEntranceStepper.cs  GridExitStepper.cs  GridLogicStepper.cs  GridWorkerStepper.cs  LogicTileExecutor.cs  Worker.cs  WorkerScene.cs
Native/: .sconsign.dblite  CMakeLists.txt  SConstruct  gdexample.gdnlib  gdexample.gdns  logic_editor.gdns  refactor_grid_spatial.gdns  worker.gdns
Native/src/: GridEntity.cpp  GridEntity.h  Maths.h  common.h  game.cpp  game.h  godot_interface.h  grid.cpp  grid.h  grid_entity.cpp  grid_entity.h  grid_tile.cpp  grid_tile.h  library.cpp  library.h  library.os  refactor_grid.cpp  refactor_grid.os  refactor_grid_spatial.cpp  refactor_grid_spatial.h  refactor_grid_spatial.os  vector_util.h
Native/src/entities/: entrance.cpp  entrance.h  grid_entity.h  worker.h
Native/src/godot_entities/: GodotWorker.cpp  GodotWorker.h  godot_worker.cpp  godot_worker.h
Native/src/grid/: grid.cpp  grid.h  grid_queries.h  grid_stepper.h  grid_worker_stepper.h
Native/src/include/: refactor_grid.h  refactor_grid_spatial.h
Native/src/logic/: logic_editor.cpp  logic_editor.h  logic_node.cpp  logic_node.h  logic_node_creator.cpp  logic_node_creator.h  logic_root_node.h
Native/test/: logic_editor_tests.cpp  test1.cpp
Properties/: AssemblyInfo.cs
Prototypes/: AnimatedArrowTile.tscn  Coal.tscn  DirectionalTile.tscn  Entrance.tscn  Exit.tscn  LogicTile.tscn  Picker.tscn  SelectionArea.tscn  Worker.gd  Worker.tscn
RefactorTests/: RefactorTests.csproj  Tests.cs
Scenes/: GoalItem.tscn
Scripts/: BuildOption.gd
UI/: GoalItem.tscn
(+114 files in other folders)
